--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       executeScript: true,
       themeColor: '#3F51B5',
       search: [
-        '/','/note/','memo/','practic/',
-      ]
-      /*search: {
+        '/note/kiwi_tcms',
+        '/',
+        '/memo/docker',
+        '/practic/'
+      ],
+      search: {
         maxAge: 86400000, // 过期时间，单位毫秒，默认一天
         paths: 'auto', // or 'auto'
         placeholder: 'Type to search',
@@ -40,7 +43,7 @@
         },
 
         // 搜索标题的最大层级, 1 - 6
-        depth: 2,
+        depth: 3,
 
         hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
 
@@ -58,14 +61,14 @@
         // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
         // 匹配到的字符串将被用来识别索引
         pathNamespaces: /^(\/(v1|v2))?/
-      }*/
+      }
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 <script>
   if (typeof navigator.serviceWorker !== 'undefined') {
