--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       logo: '/_media/pig.gif',
       name: 'Dennis',
       notFoundPage: true,
-      repo: 'https://dennis-liu.github.io/Python-crawler-tutorial-starts-from-zero/',
+      repo: 'https://dennis-liu.github.io/blog/index.html',
       coverpage:true,
       executeScript: true,
       themeColor: '#3F51B5',
