--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"/>
+  <link rel="stylesheet" href="static/vue.css"/>
   <link rel="shortcut icon" href="dispider.ico" type="image/x-icon"/>
   <link rel="icon" href="_media/pig.gif"type="image/gif"/>
 </head>
@@ -66,11 +66,11 @@
       }
     }
   </script>
-  <script src="//cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="static/vue.min.js"></script>
+  <script src="static/docsify.min.js"></script>
+  <script src="static/emoji.min.js"></script>
+  <script src="static/docsify-copy-code"></script>
+  <script src="static/search.min.js"></script>
 </body>
 <script>
   if (typeof navigator.serviceWorker !== 'undefined') {
